# ingesta

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
ingesta/: __init__.py  __main__.py  analysis.py  audit.py  auto.py  card_tracker.py  checksum.py  cli.py  deliverables.py  drive_health.py  exports.py  ingestion.py  premiere.py  project_manager.py  slate_detector.py  sync.py  templates.py  transcribe_tool.py  tui.py
ingesta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ingesta/reports/: __init__.py  audio_tech.py  bad_clip_detector.py  bin_organizer.py  csv_report.py  delivery_checklist.py  duplicate_detector.py  editor_handoff.py  frame_analysis.py  keyword_tagger.py  local_transcription.py  metadata_extractor.py  multicam_detector.py  pdf_report.py  performance_profile.py  proxy_generator.py  thumbnail_browser.py  thumbnails.py  xml_parser.py
ingesta/ui/: __init__.py  app.py  checksum_dialog.py  drop_zones.py  enhanced_workflow_steps.py  feature_cards.py  history_panel.py  main_window.py  next_steps_panel.py  reports_panel.py  source_queue.py  styles.py  sync_dialog.py  workflow_status_panel.py  workflow_steps.py
ingesta/workflow/: __init__.py  context.py  engine.py  events.py
ingesta/workflow/steps/: __init__.py  base.py  ingest.py
scripts/: run_ui.sh
tests/: conftest.py  test_core.py
tests/output/: report.csv  report_summary.csv
tests/output_pdf/: delivery_checklist.csv  delivery_checklist.txt
